--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.12.1",
     "joi": "^17.4.2",
     "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
