--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon -r dotenv/config index.js"
   },
+  "type":"module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ZainAhmad0/E-commerce-api.git"
