--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
+    "http-status-codes": "^2.1.4",
     "joi": "^17.4.2",
     "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
