--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "E commerce applicatoin (API)",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -r dotenv/config index.js"
+    "start": "nodemon -r dotenv/config index.js",
+    "test": "mocha test"
   },
   "type": "module",
   "repository": {
@@ -32,6 +33,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.1.2",
     "nodemon": "^2.0.12"
   }
 }
